--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -74,7 +74,6 @@ dependencies = [
 ]
 modules = [
 	{org = "ballerina", packageName = "workflow", moduleName = "workflow"},
-	{org = "ballerina", packageName = "workflow", moduleName = "workflow.internal"},
-	{org = "ballerina", packageName = "workflow", moduleName = "workflow.provider"}
+	{org = "ballerina", packageName = "workflow", moduleName = "workflow.internal"}
 ]
 
