--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,14 @@ jacocoVersion=0.8.10
 stdlibIoVersion=1.8.0
 stdlibTimeVersion=2.8.0
 stdlibLogVersion=2.13.0
+
+# Temporal and Related Dependencies
+temporalSdkVersion=1.32.1
+jacksonVersion=2.15.2
+grpcVersion=1.70.0
+protobufVersion=3.24.0
+protoGoogleCommonVersion=2.22.0
+guavaVersion=32.0.1-jre
+slf4jVersion=1.7.36
+micrometerVersion=1.9.9
+gsonVersion=2.10.1
