--- a/gradle.properties
+++ b/gradle.properties
@@ -19,12 +19,12 @@ stdlibTimeVersion=2.8.0
 stdlibLogVersion=2.13.0
 
 # Temporal and Related Dependencies
-temporalSdkVersion=1.32.1
-jacksonVersion=2.15.2
-grpcVersion=1.70.0
-protobufVersion=3.24.0
-protoGoogleCommonVersion=2.22.0
+temporalSdkVersion=1.32.0
+temporalTestingVersion=1.32.0
+jacksonVersion=2.15.4
+grpcVersion=1.58.1
+protobufVersion=3.25.8
 guavaVersion=32.0.1-jre
-slf4jVersion=1.7.36
-micrometerVersion=1.9.9
-gsonVersion=2.10.1
+tallyVersion=0.13.0
+perfmarkVersion=0.26.0
+nexusrpcVersion=0.4.0-alpha
