--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -18,101 +18,119 @@ artifactId = "workflow-native"
 version = "0.1.0"
 path = "../native/build/libs/workflow-native-0.1.0-SNAPSHOT.jar"
 
-# Temporal SDK
+# Temporal SDK dependencies
 [[platform.java21.dependency]]
 groupId = "io.temporal"
 artifactId = "temporal-sdk"
-version = "1.32.1"
+version = "1.32.0"
 
 [[platform.java21.dependency]]
 groupId = "io.temporal"
 artifactId = "temporal-serviceclient"
-version = "1.32.1"
+version = "1.32.0"
+
+# Nexus RPC (required by Temporal SDK)
+[[platform.java21.dependency]]
+groupId = "io.nexusrpc"
+artifactId = "nexus-sdk"
+version = "0.4.0-alpha"
 
 # gRPC dependencies
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-api"
-version = "1.70.0"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-context"
-version = "1.70.0"
-
-[[platform.java21.dependency]]
-groupId = "io.grpc"
-artifactId = "grpc-core"
-version = "1.70.0"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-stub"
-version = "1.70.0"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-protobuf"
-version = "1.70.0"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-protobuf-lite"
-version = "1.70.0"
+version = "1.58.1"
+
+[[platform.java21.dependency]]
+groupId = "io.grpc"
+artifactId = "grpc-core"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-netty-shaded"
-version = "1.70.0"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
 groupId = "io.grpc"
 artifactId = "grpc-services"
-version = "1.70.0"
-
-# Jackson JSON dependencies
-[[platform.java21.dependency]]
-groupId = "com.fasterxml.jackson.core"
-artifactId = "jackson-core"
-version = "2.15.2"
+version = "1.58.1"
 
 [[platform.java21.dependency]]
-groupId = "com.fasterxml.jackson.core"
-artifactId = "jackson-annotations"
-version = "2.15.2"
+groupId = "io.grpc"
+artifactId = "grpc-util"
+version = "1.58.1"
 
+# gRPC InProcess (required for embedded test server)
 [[platform.java21.dependency]]
-groupId = "com.fasterxml.jackson.core"
-artifactId = "jackson-databind"
-version = "2.15.2"
-
-[[platform.java21.dependency]]
-groupId = "com.fasterxml.jackson.datatype"
-artifactId = "jackson-datatype-jsr310"
-version = "2.15.2"
-
-[[platform.java21.dependency]]
-groupId = "com.fasterxml.jackson.datatype"
-artifactId = "jackson-datatype-jdk8"
-version = "2.15.2"
+groupId = "io.grpc"
+artifactId = "grpc-inprocess"
+version = "1.58.1"
 
 # Protobuf dependencies
 [[platform.java21.dependency]]
 groupId = "com.google.protobuf"
 artifactId = "protobuf-java"
-version = "3.24.0"
+version = "3.25.8"
 
 [[platform.java21.dependency]]
 groupId = "com.google.protobuf"
 artifactId = "protobuf-java-util"
-version = "3.24.0"
+version = "3.25.8"
+
+# Jackson JSON dependencies
+[[platform.java21.dependency]]
+groupId = "com.fasterxml.jackson.core"
+artifactId = "jackson-core"
+version = "2.15.4"
 
 [[platform.java21.dependency]]
-groupId = "com.google.api.grpc"
-artifactId = "proto-google-common-protos"
-version = "2.22.0"
+groupId = "com.fasterxml.jackson.core"
+artifactId = "jackson-annotations"
+version = "2.15.4"
 
-# Guava
+[[platform.java21.dependency]]
+groupId = "com.fasterxml.jackson.core"
+artifactId = "jackson-databind"
+version = "2.15.4"
+
+[[platform.java21.dependency]]
+groupId = "com.fasterxml.jackson.datatype"
+artifactId = "jackson-datatype-jsr310"
+version = "2.15.4"
+
+[[platform.java21.dependency]]
+groupId = "com.fasterxml.jackson.datatype"
+artifactId = "jackson-datatype-jdk8"
+version = "2.15.4"
+
+# Metrics
+[[platform.java21.dependency]]
+groupId = "com.uber.m3"
+artifactId = "tally-core"
+version = "0.13.0"
+
+# Guava and supporting libraries
 [[platform.java21.dependency]]
 groupId = "com.google.guava"
 artifactId = "guava"
@@ -123,40 +141,8 @@ groupId = "com.google.guava"
 artifactId = "failureaccess"
 version = "1.0.1"
 
-# Logging dependencies
-[[platform.java21.dependency]]
-groupId = "org.slf4j"
-artifactId = "slf4j-api"
-version = "1.7.36"
-
-# Metrics dependencies (required by Temporal)
-[[platform.java21.dependency]]
-groupId = "io.micrometer"
-artifactId = "micrometer-core"
-version = "1.9.9"
-
 # Other dependencies
-[[platform.java21.dependency]]
-groupId = "com.google.code.gson"
-artifactId = "gson"
-version = "2.10.1"
-
 [[platform.java21.dependency]]
 groupId = "io.perfmark"
 artifactId = "perfmark-api"
 version = "0.26.0"
-
-[[platform.java21.dependency]]
-groupId = "com.google.code.findbugs"
-artifactId = "jsr305"
-version = "3.0.2"
-
-[[platform.java21.dependency]]
-groupId = "org.checkerframework"
-artifactId = "checker-qual"
-version = "3.33.0"
-
-[[platform.java21.dependency]]
-groupId = "com.google.errorprone"
-artifactId = "error_prone_annotations"
-version = "2.20.0"
