Add integration tests for Ballerina workflows with Temporal
- Implemented various workflows including error handling, multi-activity, order processing, and simple workflows.
- Created corresponding test cases to validate the functionality of each workflow.
- Introduced a configuration file for Temporal server settings.
- Added utility functions for generating unique workflow IDs.
- Updated the test server to use a different default port for better compatibility.
- Enhanced the workflow runtime to automatically start the singleton worker if not already running.

--- a/integration-tests/tests/Config.toml
+++ b/integration-tests/tests/Config.toml
@@ -1,6 +1,6 @@
-# Test configuration for unit tests
-# Note: Unit tests use lazy gRPC connection and don't require a running server
-# For integration tests, use the workflow-integration-tests module
+# Auto-generated test configuration
+# Using EXTERNAL Temporal server for debugging
+# Start your local Temporal server with: temporal server start-dev
 
 [ballerina.workflow.workflowConfig]
 provider = "TEMPORAL"
